# media-helper

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/media_helper/: __main__.py  bootstrap.py  cli.py  config.py  ports.py
src/media_helper/adapters/: __init__.py  rich.py  tmdb.py
src/media_helper/core/: formatter.py  model.py
src/media_helper/services/: __init__.py  movie.py  movie_renamer.py
tests/: conftest.py  test_tmdb_adapter.py
