[project]
name = "media-helper"
version = "0.1.0"
description = "Help you managing your personal media by providing tools for automatizing tedious tasks"
authors = [{ name = "Benoit Godard", email = "benoit.godard.p@gmail.com" }]
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.6.4",
    "parse-torrent-title>=2.8.1",
    "pydantic-settings>=2.2.1",
    "typer<0.12.0",
    "rich>=13.7.1",
]
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }

[project.scripts]
media = "media_helper.cli:app"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
test = ["pytest>=8.1.1"]
lint = ["ruff>=0.3.5", "mypy>=1.9.0"]

[tool.pdm.scripts]
cli = { call = "media_helper.__main__:main" }

[tool.mypy]
strict = true
plugins = "pydantic.mypy"

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM", "I"]

[tool.pytest.ini_options]
testpaths = ["src", "tests"]
addopts = ["--doctest-modules", "--doctest-report=ndiff"]
doctest_optionflags = [
    "NORMALIZE_WHITESPACE",
    "IGNORE_EXCEPTION_DETAIL",
    "ELLIPSIS",
]
