[project]
name = "media-helper"
version = "0.1.0"
description = "Help you managing your personal media by providing tools for automatizing tedious tasks"
authors = [{ name = "Benoit Godard", email = "benoit.godard.p@gmail.com" }]
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "parse-torrent-title>=2.8.1",
    "pydantic-settings>=2.2.1",
    "typer>=0.12.3",
    "rich>=13.7.1",
]
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }

[project.scripts]
media = "media_helper.cli:app"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true
plugins = ["sync-pre-commit-lock"]

[tool.pdm.dev-dependencies]
test = ["pytest>=8.1.1"]
lint = ["ruff>=0.3.7", "mypy>=1.9.0", "pre-commit>=3.7.0"]

[tool.pdm.scripts]
cli = { call = "media_helper.__main__:main" }
lint = "pre-commit run --all-files"

[tool.mypy]
files = ["src", "tests"]
strict = true
plugins = "pydantic.mypy"

[[tool.mypy.overrides]]
module = "PTN.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["src", "tests"]
addopts = ["--doctest-modules", "--doctest-report=ndiff"]
doctest_optionflags = [
    "NORMALIZE_WHITESPACE",
    "IGNORE_EXCEPTION_DETAIL",
    "ELLIPSIS",
]
